GNOME Bugzilla – Bug 745235
Wrong session type getting used occasionally
Last modified: 2015-02-26 18:31:56 UTC
I notice in my journal sometimes the wrong session type is getting applied to a session.
Created attachment 298008 [details] [review] session: move some debug spew around We end up printing "looking for session file" a bunch of times in the log with no indication why. This commit drops the message and instead adds messages to the callers.
Created attachment 298009 [details] [review] session: add more debug spew about session type This should give a clearer picture about what session type is getting picked when.
Created attachment 298010 [details] [review] session: reset session type to default when selecting non-wayland session If we select a non-wayland session we need to clear the session type, or it will linger as a wayland session if it was one previously. Prevents users from getting logged into an X session when with XDG_SESSION_TYPE=wayland.
Attachment 298008 [details] pushed as a2b9812 - session: move some debug spew around Attachment 298009 [details] pushed as 7241f8b - session: add more debug spew about session type Attachment 298010 [details] pushed as 4e68490 - session: reset session type to default when selecting non-wayland session