session: move some debug spew around

We end up printing "looking for session file" a bunch of times
in the log with no indication why.  This commit drops the message
and instead adds messages to the callers.

https://bugzilla.gnome.org/show_bug.cgi?id=745235